--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>3.1.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 </project>
